syntax = "proto3";

package pipelines.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/bigkevmcd/peanut-helmpipelines/pkg/protos/pipelines/v1";

// PipelinesService provides functionality for pipelines.
service PipelinesService {
  // List all Pipelines
  rpc ListPipelines(ListPipelinesRequest) returns (ListPipelinesResponse);
}

message ListPipelinesRequest {}

message ListPipelinesResponse {
  int32 count = 1;
  repeated Pipeline results = 3;
}

message Pipeline {
  message Environment {
    message HelmChart {
      string name = 1;
      string version = 2;
      CrossNamespaceObjectReference source = 3;
    }

    string name = 1;
    repeated HelmChart charts = 2;
  }
  string name = 1;

  repeated Environment environments = 2;
}

message CrossNamespaceObjectReference {
  string kind = 1;
  string namespace = 2;
  string name = 3;
}
